--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "093cc642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pybluez\n",
+    "import bluetooth"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "ffd7bd06",
+   "id": "98d964d9",
    "metadata": {},
    "outputs": [
     {
@@ -13,62 +24,25 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13148\\2311043628.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sudo python3 -m pip install pybluez'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mbluetooth\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mnearby_devices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbluetooth\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiscover_devices\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlookup_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"found %d devices\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnearby_devices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3628\\158798189.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mbluetooth\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mnearby_devices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbluetooth\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiscover_devices\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlookup_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"found %d devices\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnearby_devices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnearby_devices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m      \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" %s - %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bluetooth'"
      ]
     }
    ],
    "source": [
-    "!sudo apt-get install bluetooth libbluetooth-dev\n",
-    "!sudo python3 -m pip install pybluez\n",
-    "\n",
-    "import bluetooth\n",
+    "print(\"Scanning for bluetooth devices:\")\n",
     "nearby_devices = bluetooth.discover_devices(lookup_names=True)\n",
-    "print(\"found %d devices\" % len(nearby_devices))\n",
-    "\n",
-    "for addr, name in nearby_devices:\n",
-    "     print(\" %s - %s\" % (addr, name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "093cc642",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pybluez"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98d964d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bluetooth\n",
-    "nearby_devices = bluetooth.discover_devices(lookup_names=True)\n",
+    "devices_num = len(nearby_devices)\n",
     "print(\"found %d devices\" % len(nearby_devices))\n",
     "for addr, name in nearby_devices:\n",
-    "     print(\" %s - %s\" % (addr, name))"
+    "    print(\"\\n\")\n",
+    "     print(\" %s - %s\" % (addr, name)) \n",
+    "     print(\"Device:\")\n",
+    "     print(\"Device Name: %s\" % (name))\n",
+    "     print(\"Device MAC Address: %s\" % (addr))\n",
+    "    print(\"\\n\")\n",
+    "return"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed571265",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cf18728",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
